...
    "en": "Contracts",
    "ur": "ٹھیکے",
    "hi": "अनुबंध",
    "bn": "চুক্তি",
    "fil": "Mga Kontrata"
  },
  "المقاولون": {
    "en": "Contractors",
    "ur": "ٹھیکیدار",
    "hi": "ठेकेदार",
    "bn": "ঠিকাদার",
    "fil": "Mga Kontratista"
  },
...
    "en": "Mock Payment",
    "ur": "موک پش",
    "hi": "मॉक भुगतान",
    "bn": "মক পুশ",
    "fil": "Mock na Pagbabayad"
  },
  "دليل المقاولين": {
    "en": "Contractor Guide",
    "ur": "ٹھیکیداروں کی ڈائریکٹری",
    "hi": "ठेकेदार गाइड",
    "bn": "ঠিকাদার ডিরেক্টরি",
    "fil": "Gabay ng kontratista"
  },
...
